# aging-fly-cell-atlas

./: .gitignore  CODE_README.md  README.md  main.py  pyproject.toml
scripts/: 01_data_retrieval.py  02_data_exploration.py  03_data_processing.py  04_upload_to_huggingface.py  generate_head_summary.py  run_phase3.py
